Drivers: Improvements to LSL Input and Output
+ Input and Output plugins are now compatible and can send data to each other
+ User can specify the stream names both for the signal and the marker streams
+ Input driver: Improved timing, should now have less drift
+ Input driver: Disabled reconnection on error, as it did not seem to be working.
+ Input driver: Drift correction is now enabled but can be disabled from prefs
+ Input driver: Timeouts are now smaller
+ Input driver: Should no longer hang if a stream vanishes
+ Output plugin: The samples are now tagged with AS timestamps
+ Output plugin: Markers are now int32 instead of strings
+ More error handling
+ Code cleanup
+ The AS preference table items are now left-aligned


Former-commit-id: 73cb8bf43bec79d448ceefdbad1ddf937d523c8a [formerly d5e6a29bec4c6d13ff97163f6ba97838d0709091]
Former-commit-id: e66b8e82d1d3dfae16c679140e043e9fb4eb1173

--- a/applications/platform/acquisition-server/share/interface.ui
+++ b/applications/platform/acquisition-server/share/interface.ui
@@ -526,6 +526,8 @@ Configuration </property>
               <object class="GtkLabel" id="label_oversampling_factor">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+				<property name="xalign">0</property>
+				<property name="xpad">2</property>
                 <property name="label" translatable="yes">Oversampling Factor</property>
               </object>
               <packing>
@@ -548,6 +550,8 @@ Configuration </property>
               <object class="GtkLabel" id="label_select_only_named_channels">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+				<property name="xalign">0</property>
+				<property name="xpad">2</property>
                 <property name="label" translatable="yes">Select only named channels</property>
               </object>
               <packing>
@@ -607,6 +611,8 @@ Configuration </property>
               <object class="GtkLabel" id="label_jitter_measure_count">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+				<property name="xalign">0</property>
+				<property name="xpad">2</property>
                 <property name="label" translatable="yes">Jitter Estimation Count For Drift</property>
               </object>
               <packing>
@@ -618,6 +624,8 @@ Configuration </property>
               <object class="GtkLabel" id="label_drift_tolerance">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+				<property name="xalign">0</property>
+				<property name="xpad">2</property>
                 <property name="label" translatable="yes">Drift Tolerance (ms)</property>
               </object>
               <packing>
@@ -687,6 +695,8 @@ Configuration </property>
               <object class="GtkLabel" id="label_drift_correction">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+				<property name="xalign">0</property>
+				<property name="xpad">2</property>
                 <property name="label" translatable="yes">Drift Correction</property>
               </object>
             </child>
@@ -722,6 +732,8 @@ Configuration </property>
               <object class="GtkLabel" id="label_nan_replacement">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+				<property name="xalign">0</property>
+				<property name="xpad">2</property>
                 <property name="label" translatable="yes">NaN value replacement</property>
               </object>
               <packing>
