--- a/contrib/plugins/server-drivers/gtec-gipsa/share/interface-GTec-GUSBamp.ui
+++ b/contrib/plugins/server-drivers/gtec-gipsa/share/interface-GTec-GUSBamp.ui
@@ -781,6 +781,33 @@ Type - Order - [Low Cut; High Cut] - Frequency</property>
                         <property name="x_padding">2</property>
                       </packing>
                     </child>
+                    <child>
+                      <object class="GtkLabel" id="label_Calibrationsignal">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="label" translatable="yes">Calibration signal</property>
+                      </object>
+                      <packing>
+                        <property name="top_attach">8</property>
+                        <property name="bottom_attach">9</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkCheckButton" id="checkbutton_CalibrationSignal">
+                        <property name="label" translatable="yes"></property>
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="receives_default">False</property>
+                        <property name="draw_indicator">True</property>
+                      </object>
+                      <packing>
+                        <property name="left_attach">1</property>
+                        <property name="right_attach">2</property>
+                        <property name="top_attach">8</property>
+                        <property name="bottom_attach">9</property>
+                        <property name="x_padding">2</property>
+                      </packing>
+                    </child>					
                   </object>
                   <packing>
                     <property name="expand">True</property>
