--- a/plugins/processing/simple-visualisation/share/openvibe-simple-visualisation-SignalDisplay.ui
+++ b/plugins/processing/simple-visualisation/share/openvibe-simple-visualisation-SignalDisplay.ui
@@ -585,29 +585,14 @@
         <property name="toolbar_style">both</property>
         <property name="show_arrow">False</property>
         <child>
-          <object class="GtkRadioToolButton" id="SignalDisplayScrollModeButton">
+          <object class="GtkToggleToolButton" id="SignalDisplayScrollModeButton">
             <property name="visible">True</property>
             <property name="sensitive">False</property>
             <property name="can_focus">False</property>
+            <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>			
             <property name="use_action_appearance">False</property>
             <property name="label" translatable="yes">Scroll Mode</property>
             <property name="stock_id">gtk-find</property>
-          </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="homogeneous">True</property>
-          </packing>
-        </child>
-        <child>
-          <object class="GtkRadioToolButton" id="SignalDisplayScanModeButton">
-            <property name="visible">True</property>
-            <property name="sensitive">False</property>
-            <property name="can_focus">False</property>
-            <property name="use_action_appearance">False</property>
-            <property name="label" translatable="yes">Scan mode</property>
-            <property name="stock_id">gtk-find</property>
-            <property name="active">True</property>
-            <property name="group">SignalDisplayScrollModeButton</property>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -782,7 +767,7 @@
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="n_rows">3</property>
-                <property name="n_columns">3</property>
+                <property name="n_columns">4</property>
                 <property name="column_spacing">4</property>
                 <child>
                   <object class="GtkVSeparator" id="vseparator1">
@@ -792,6 +777,7 @@
                   <packing>
                     <property name="left_attach">1</property>
                     <property name="right_attach">2</property>
+                    <property name="top_attach">1</property>
                     <property name="bottom_attach">3</property>
                   </packing>
                 </child>
@@ -811,8 +797,8 @@
                     <property name="numeric">True</property>
                   </object>
                   <packing>
-                    <property name="left_attach">2</property>
-                    <property name="right_attach">3</property>
+                    <property name="left_attach">3</property>
+                    <property name="right_attach">4</property>
                     <property name="top_attach">1</property>
                     <property name="bottom_attach">2</property>
                   </packing>
@@ -825,8 +811,8 @@
                     <property name="label" translatable="yes">Time Scale</property>
                   </object>
                   <packing>
-                    <property name="left_attach">2</property>
-                    <property name="right_attach">3</property>
+                    <property name="left_attach">3</property>
+                    <property name="right_attach">4</property>
                     <property name="top_attach">2</property>
                     <property name="bottom_attach">3</property>
                   </packing>
@@ -853,7 +839,6 @@
                     <property name="primary_icon_sensitive">True</property>
                     <property name="secondary_icon_sensitive">True</property>
                     <property name="adjustment">adjustment2</property>
-                    <property name="digits">3</property>
                     <property name="snap_to_ticks">True</property>
                     <property name="numeric">True</property>
                   </object>
@@ -863,12 +848,14 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkToggleButton" id="SignalDisplayVerticalScaleToggleButton">
+				<!--
+                  <object class="GtkVBox" id="SignalDisplayVerticalScalingBox">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
                     <property name="use_action_appearance">False</property>
-                    <child>
+					
+                    <child> -->
                       <object class="GtkHBox" id="hbox1">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
@@ -885,10 +872,10 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkLabel" id="label3">
+                          <object class="GtkLabel" id="SignalDisplayScalingModeText">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
-                            <property name="label" translatable="yes">Best Fit	</property>
+                            <property name="label" translatable="yes">Auto vertical scale : </property>
                           </object>
                           <packing>
                             <property name="expand">True</property>
@@ -897,31 +884,70 @@
                           </packing>
                         </child>
                       </object>
+					  <!--
                     </child>
-                  </object>
+                  </object> -->
                 </child>
                 <child>
-                  <placeholder/>
+                  <object class="GtkLabel" id="SignalDisplayDCLabel">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
+                    <property name="label" translatable="yes">Vertical offset</property>
+                  </object>
+                  <packing>
+                    <property name="left_attach">2</property>
+                    <property name="right_attach">3</property>
+                    <property name="top_attach">2</property>
+                    <property name="bottom_attach">3</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkSpinButton" id="SignalDisplayDC">
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
+                    <property name="invisible_char">•</property>
+                    <property name="invisible_char_set">True</property>
+                    <property name="primary_icon_activatable">False</property>
+                    <property name="secondary_icon_activatable">False</property>
+                    <property name="primary_icon_sensitive">True</property>
+                    <property name="secondary_icon_sensitive">True</property>
+                    <property name="adjustment">adjustment3</property>
+                    <property name="climb_rate">0.001</property>
+                    <property name="digits">3</property>
+                    <property name="snap_to_ticks">True</property>
+                    <property name="numeric">True</property>
+                  </object>
+                  <packing>
+                    <property name="left_attach">2</property>
+                    <property name="right_attach">3</property>
+                    <property name="top_attach">1</property>
+                    <property name="bottom_attach">2</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkComboBox" id="ScalingMode">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <property name="model">liststore1</property>
+                    <child>
+                      <object class="GtkCellRendererText" id="cellrenderertext1"/>
+                      <attributes>
+                        <attribute name="text">0</attribute>
+                      </attributes>
+                    </child>
+                  </object>
+                  <packing>
+                    <property name="left_attach">1</property>
+                    <property name="right_attach">4</property>
+                  </packing>
                 </child>
               </object>
             </child>
           </object>
           <packing>
             <property name="expand">False</property>
-          </packing>
-        </child>
-        <child>
-          <object class="GtkToggleToolButton" id="SignalDisplayAutoTranslationButton">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
-            <property name="use_action_appearance">False</property>
-            <property name="label" translatable="yes">Center signal</property>
-            <property name="use_underline">True</property>
-            <property name="stock_id">gtk-sort-ascending</property>
-          </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="homogeneous">True</property>
           </packing>
         </child>
         <child>
@@ -998,7 +1024,7 @@
   <object class="GtkAdjustment" id="adjustment1">
     <property name="upper">9999999999</property>
     <property name="value">10</property>
-    <property name="step_increment">0.001</property>
+    <property name="step_increment">0.10000000000000001</property>
     <property name="page_increment">100</property>
   </object>
   <object class="GtkAdjustment" id="adjustment2">
@@ -1006,5 +1032,17 @@
     <property name="value">1</property>
     <property name="step_increment">1</property>
     <property name="page_increment">10</property>
+  </object>
+  <object class="GtkAdjustment" id="adjustment3">
+    <property name="lower">-1000000</property>
+    <property name="upper">1000000</property>
+    <property name="step_increment">1</property>
+    <property name="page_increment">10</property>
+  </object>
+  <object class="GtkListStore" id="liststore1">
+    <columns>
+      <!-- column-name filter -->
+      <column type="gchararray"/>
+    </columns>
   </object>
 </interface>
