--- a/plugins/processing/simple-visualisation/share/openvibe-simple-visualisation-SignalDisplay.ui
+++ b/plugins/processing/simple-visualisation/share/openvibe-simple-visualisation-SignalDisplay.ui
@@ -747,6 +747,22 @@
           </packing>
         </child>
         <child>
+          <object class="GtkToggleToolButton" id="SignalDisplayToggleUnitsButton">
+            <property name="visible">True</property>
+            <property name="sensitive">False</property>
+            <property name="can_focus">False</property>
+            <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
+            <property name="use_action_appearance">False</property>
+            <property name="label">Channel units</property>
+            <property name="stock_id">gtk-dialog-info</property>
+            <property name="active">False</property>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="homogeneous">True</property>
+          </packing>
+        </child>		
+        <child>
           <object class="GtkSeparatorToolItem" id="SignalDisplayToolbarSeparator2">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
