--- a/contrib/plugins/server-drivers/openbci/share/interface-OpenBCI.ui
+++ b/contrib/plugins/server-drivers/openbci/share/interface-OpenBCI.ui
@@ -3,9 +3,9 @@
   <requires lib="gtk+" version="2.16"/>
   <!-- interface-naming-policy project-wide -->
   <object class="GtkAdjustment" id="adjustment1">
-    <property name="value">6</property>
+    <property name="value">8</property>
     <property name="lower">1</property>
-    <property name="upper">6</property>
+    <property name="upper">256</property>
     <property name="step_increment">1</property>
     <property name="page_increment">10</property>
   </object>
@@ -40,34 +40,12 @@
       </row>
     </data>
   </object>
-  <object class="GtkListStore" id="model2">
-    <columns>
-      <!-- column-name gchararray -->
-      <column type="gchararray"/>
-    </columns>
-    <data>
-      <row>
-        <col id="0" translatable="yes">253</col>
-      </row>
-      <row>
-        <col id="0" translatable="yes">254</col>
-      </row>
-      <row>
-        <col id="0" translatable="yes">255</col>
-      </row>
-      <row>
-        <col id="0" translatable="yes">256</col>
-      </row>
-      <row>
-        <col id="0" translatable="yes">257</col>
-      </row>
-      <row>
-        <col id="0" translatable="yes">258</col>
-      </row>
-      <row>
-        <col id="0" translatable="yes">259</col>
-      </row>
-    </data>
+  <object class="GtkAdjustment" id="adjustment_sampling_frequency">
+    <property name="value">250</property>
+    <property name="lower">4</property>
+    <property name="upper">4096</property>
+    <property name="step_increment">1</property>
+    <property name="page_increment">10</property>
   </object>
   <object class="GtkDialog" id="openvibe-acquisition-server-settings">
     <property name="border_width">5</property>
@@ -84,11 +62,7 @@
         <child>
           <object class="GtkLabel" id="label_title">
             <property name="visible">True</property>
-            <property name="label" translatable="yes">Modular-EEG Configuration (6 channels)
-
-&lt;small&gt;&lt;span color="darkred"&gt;Attention: Sampling frequency may need
-some adjustment to best fit the device clock&lt;/span&gt;&lt;/small&gt;</property>
-            <property name="use_markup">True</property>
+            <property name="label" translatable="yes">OpenBCI reader</property>
             <property name="justify">center</property>
           </object>
           <packing>
@@ -254,15 +228,12 @@ some adjustment to best fit the device clock&lt;/span&gt;&lt;/small&gt;</propert
                       </object>
                     </child>
                     <child>
-                      <object class="GtkComboBox" id="combobox_sampling_frequency">
+                      <object class="GtkSpinButton" id="combobox_sampling_frequency">
                         <property name="visible">True</property>
-                        <property name="model">model2</property>
-                        <child>
-                          <object class="GtkCellRendererText" id="renderer3"/>
-                          <attributes>
-                            <attribute name="text">0</attribute>
-                          </attributes>
-                        </child>
+                        <property name="can_focus">True</property>
+                        <property name="adjustment">adjustment_sampling_frequency</property>
+                        <property name="snap_to_ticks">True</property>
+                        <property name="numeric">True</property>
                       </object>
                       <packing>
                         <property name="left_attach">1</property>
