Add field to add custom command on init.
Former-commit-id: b0fd670547317487ec541d9470acc1ba6b7ab516 [formerly 019f5a9d11c422eb242fa097cc607b7b89d1c173]
Former-commit-id: 9647d1bbef4338c59fd0265eef65050644470f7f

--- a/contrib/plugins/server-drivers/openbci/share/interface-OpenBCI.ui
+++ b/contrib/plugins/server-drivers/openbci/share/interface-OpenBCI.ui
@@ -254,6 +254,29 @@
                         <property name="bottom_attach">6</property>
                       </packing>
                     </child>
+		    <child>
+                      <object class="GtkLabel" id="label_com_init">
+                        <property name="visible">True</property>
+                        <property name="label" translatable="yes">Send command on init :</property>
+                      </object>
+                      <packing>
+                        <property name="top_attach">6</property>
+                        <property name="bottom_attach">7</property>
+                      </packing>
+                    </child>
+		    <child>
+                      <object class="GtkEntry" id="entry_com_init">
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="text" translatable="yes"></property>
+                      </object>
+                      <packing>
+                        <property name="left_attach">1</property>
+                        <property name="right_attach">2</property>
+                        <property name="top_attach">6</property>
+                        <property name="bottom_attach">7</property>
+                      </packing>
+                    </child>
                   </object>
                   <packing>
                     <property name="position">0</property>
