--- a/contrib/plugins/server-drivers/openbci/share/interface-OpenBCI.ui
+++ b/contrib/plugins/server-drivers/openbci/share/interface-OpenBCI.ui
@@ -47,6 +47,13 @@
     <property name="step_increment">1</property>
     <property name="page_increment">10</property>
   </object>
+  <object class="GtkAdjustment" id="adjustment_com_delay">
+    <property name="value">100</property>
+    <property name="lower">1</property>
+    <property name="upper">30000</property>
+    <property name="step_increment">1</property>
+    <property name="page_increment">10</property>
+  </object>
   <object class="GtkDialog" id="openvibe-acquisition-server-settings">
     <property name="border_width">5</property>
     <property name="title" translatable="yes">Device configuration</property>
@@ -275,6 +282,31 @@
                         <property name="right_attach">2</property>
                         <property name="top_attach">6</property>
                         <property name="bottom_attach">7</property>
+                      </packing>
+                    </child>
+		    <child>
+                      <object class="GtkLabel" id="label_com_delay">
+                        <property name="visible">True</property>
+                        <property name="label" translatable="yes">Delay between init commands (ms) :</property>
+                      </object>
+                      <packing>
+                        <property name="top_attach">7</property>
+                        <property name="bottom_attach">8</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkSpinButton" id="spinbutton_com_delay">
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="adjustment">adjustment_com_delay</property>
+                        <property name="snap_to_ticks">True</property>
+                        <property name="numeric">True</property>	
+                      </object>
+                      <packing>
+                        <property name="left_attach">1</property>
+                        <property name="right_attach">2</property>
+                        <property name="top_attach">7</property>
+                        <property name="bottom_attach">8</property>
                       </packing>
                     </child>
                   </object>
