Right init sequence.
Former-commit-id: 2c05db35b23cd6947dc235a402b5ae8d9275dc86 [formerly d5ede7baf06a55a3096e0e80652d77a481d2c9ea]
Former-commit-id: 198381dae03d9598e94f616f879d6719ab01b50f

--- a/contrib/plugins/server-drivers/openbci/share/interface-OpenBCI.ui
+++ b/contrib/plugins/server-drivers/openbci/share/interface-OpenBCI.ui
@@ -71,8 +71,8 @@
             <property name="visible">True</property>
             <property name="label" translatable="yes">OpenBCI reader
 	      
-&lt;small&gt;Upon initialization, board response will appear in the console
-and should end by "&lt;b&gt;$$$&lt;/b&gt;" before stream starts.
+&lt;small&gt;Upon initialization, board responses will appear in the console
+and should end by "&lt;b&gt;$$$&lt;/b&gt;" after a few seconds, before stream starts.
 
 The last 3 channels represent accelerometer values.
 The sampling rate and the total number of channels are automatically
