Plugins: Fixes to Signal Display
- Redraw will now be immediate after y scaling mode change
- Stimulations list will update as stimulations arrive
- Stimulations will now have a numeric code in the list if name is not known
- Fixed issues with multiview scaling
- Fixed problem with y offset not allowing fractional stepping
- Will now print more errors and return appropriately


Former-commit-id: b87b9c9a4bfcc529967530593917ad8f554821dc [formerly edb32937ce3e8a0438f66d122ac16e666d2f53ea]
Former-commit-id: 661018dd97580295b64ce173dc1048ce6d3d4934

--- a/plugins/processing/simple-visualisation/share/openvibe-simple-visualisation-SignalDisplay.ui
+++ b/plugins/processing/simple-visualisation/share/openvibe-simple-visualisation-SignalDisplay.ui
@@ -931,8 +931,8 @@
                     <property name="secondary_icon_sensitive">True</property>
                     <property name="adjustment">adjustment3</property>
                     <property name="climb_rate">0.001</property>
-                    <property name="digits">3</property>
-                    <property name="snap_to_ticks">True</property>
+                    <property name="digits">5</property>
+                    <property name="snap_to_ticks">False</property>
                     <property name="numeric">True</property>
                   </object>
                   <packing>
@@ -1052,7 +1052,7 @@
   <object class="GtkAdjustment" id="adjustment3">
     <property name="lower">-1000000</property>
     <property name="upper">1000000</property>
-    <property name="step_increment">1</property>
+    <property name="step_increment">0.01</property>
     <property name="page_increment">10</property>
   </object>
   <object class="GtkListStore" id="liststore1">
