--- a/plugins/processing/simple-visualisation/share/openvibe-simple-visualisation-SignalDisplay.ui
+++ b/plugins/processing/simple-visualisation/share/openvibe-simple-visualisation-SignalDisplay.ui
@@ -809,7 +809,7 @@
                     <property name="adjustment">adjustment1</property>
                     <property name="climb_rate">0.001</property>
                     <property name="digits">3</property>
-                    <property name="snap_to_ticks">True</property>
+                    <property name="snap_to_ticks">False</property>
                     <property name="numeric">True</property>
                   </object>
                   <packing>
@@ -855,7 +855,9 @@
                     <property name="primary_icon_sensitive">True</property>
                     <property name="secondary_icon_sensitive">True</property>
                     <property name="adjustment">adjustment2</property>
-                    <property name="snap_to_ticks">True</property>
+                    <property name="climb_rate">0.001</property>
+                    <property name="digits">5</property>					
+                    <property name="snap_to_ticks">False</property>
                     <property name="numeric">True</property>
                   </object>
                   <packing>
@@ -1038,12 +1040,14 @@
     </child>
   </object>
   <object class="GtkAdjustment" id="adjustment1">
+    <property name="lower">0.001</property>
     <property name="upper">9999999999</property>
     <property name="value">10</property>
     <property name="step_increment">0.10000000000000001</property>
     <property name="page_increment">100</property>
   </object>
   <object class="GtkAdjustment" id="adjustment2">
+    <property name="lower">0.001"</property>
     <property name="upper">1000000</property>
     <property name="value">1</property>
     <property name="step_increment">1</property>
