Extend CheckImpedance support to MCSNVX Driver.
Signed-off-by: Serrière Guillaume <guillaume.serriere@inria.fr>

Former-commit-id: fc23dff939448c9421321798613013ec304baed8 [formerly 19e6d9cc2dd14eaea458ae520f29babf862787b9]
Former-commit-id: d1caa9421e814a01bc923cfb627b64162128b6c7

--- a/applications/platform/acquisition-server/share/interface-MCSNVXDriver.ui
+++ b/applications/platform/acquisition-server/share/interface-MCSNVXDriver.ui
@@ -180,7 +180,7 @@
                   <object class="GtkTable" id="table2">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="n_rows">6</property>
+                    <property name="n_rows">8</property>
                     <property name="n_columns">2</property>
                     <property name="homogeneous">True</property>
                     <child>
@@ -404,6 +404,31 @@
                       <packing>
                         <property name="top_attach">6</property>
                         <property name="bottom_attach">7</property>
+                      </packing>
+                    </child>
+		    <child>
+                      <object class="GtkLabel" id="label1">
+                        <property name="visible">True</property>
+			<property name="can_focus">False</property>
+                        <property name="label" translatable="yes">Check impedance :</property>
+                      </object>
+                      <packing>
+                        <property name="top_attach">7</property>
+                        <property name="bottom_attach">8</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkCheckButton" id="checkbutton_impedance">
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="receives_default">False</property>
+                        <property name="draw_indicator">True</property>
+                      </object>
+                      <packing>
+                        <property name="left_attach">1</property>
+                        <property name="right_attach">2</property>
+                        <property name="top_attach">7</property>
+                        <property name="bottom_attach">8</property>
                       </packing>
                     </child>
                   </object>
