Extend CheckImpedance support to universal TMSi driver.
Signed-off-by: Serrière Guillaume <guillaume.serriere@inria.fr>

Former-commit-id: 9e8fd4fd1b7507d846534aab5256814d91e37111 [formerly 4c8ffb88056371e228840d640366421abee94e8d]
Former-commit-id: 2a3c97afa79ac8c425bc9a2373ef1a1e79d51822

--- a/applications/platform/acquisition-server/share/interface-TMSi.ui
+++ b/applications/platform/acquisition-server/share/interface-TMSi.ui
@@ -214,7 +214,7 @@
                   <object class="GtkTable" id="table2">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="n_rows">13</property>
+                    <property name="n_rows">14</property>
                     <property name="n_columns">2</property>
                     <property name="homogeneous">True</property>
                     <child>
@@ -445,8 +445,8 @@ Higher sampling frequency increases precision of EEG.</property>
                         <property name="single_line_mode">True</property>
                       </object>
                       <packing>
-                        <property name="top_attach">12</property>
-                        <property name="bottom_attach">13</property>
+                        <property name="top_attach">13</property>
+                        <property name="bottom_attach">14</property>
                       </packing>
                     </child>
                     <child>
@@ -466,8 +466,8 @@ Higher sampling frequency increases precision of EEG.</property>
                       <packing>
                         <property name="left_attach">1</property>
                         <property name="right_attach">2</property>
-                        <property name="top_attach">12</property>
-                        <property name="bottom_attach">13</property>
+                        <property name="top_attach">13</property>
+                        <property name="bottom_attach">14</property>
                       </packing>
                     </child>
                     <child>
@@ -479,8 +479,8 @@ Higher sampling frequency increases precision of EEG.</property>
                       </object>
                       <packing>
                         <property name="right_attach">2</property>
-                        <property name="top_attach">11</property>
-                        <property name="bottom_attach">12</property>
+                        <property name="top_attach">12</property>
+                        <property name="bottom_attach">13</property>
                       </packing>
                     </child>
                     <child>
@@ -555,6 +555,31 @@ Higher sampling frequency increases precision of EEG.</property>
                         <property name="right_attach">2</property>
                         <property name="top_attach">10</property>
                         <property name="bottom_attach">11</property>
+                      </packing>
+                    </child>
+		    <child>
+                      <object class="GtkLabel" id="label1">
+                        <property name="visible">True</property>
+			<property name="can_focus">False</property>
+                        <property name="label" translatable="yes">Check impedance :</property>
+                      </object>
+                      <packing>
+                        <property name="top_attach">11</property>
+                        <property name="bottom_attach">12</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkCheckButton" id="checkbutton_impedance">
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="receives_default">False</property>
+                        <property name="draw_indicator">True</property>
+                      </object>
+                      <packing>
+                        <property name="left_attach">1</property>
+                        <property name="right_attach">2</property>
+                        <property name="top_attach">11</property>
+                        <property name="bottom_attach">12</property>
                       </packing>
                     </child>
                   </object>
