--- a/contrib/plugins/server-drivers/gtec-gipsa/share/interface-GTec-GUSBamp.ui
+++ b/contrib/plugins/server-drivers/gtec-gipsa/share/interface-GTec-GUSBamp.ui
@@ -230,6 +230,46 @@
                 <property name="position">2</property>
               </packing>
             </child>
+	    <child>
+	      <object class="GtkTable" id="table1">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="n_rows">1</property>
+                <property name="n_columns">2</property>
+                <property name="column_spacing">5</property>
+                <property name="row_spacing">5</property>
+                <child>
+		  <object class="GtkLabel" id="label1">
+		    <property name="visible">True</property>
+		    <property name="can_focus">False</property>
+		    <property name="label" translatable="yes">Check impedance :</property>
+		  </object>
+		  <packing>
+		    <property name="top_attach">1</property>
+		    <property name="bottom_attach">2</property>
+		  </packing>
+		</child>
+		<child>
+		  <object class="GtkCheckButton" id="checkbutton_impedance">
+		    <property name="visible">True</property>
+		    <property name="can_focus">True</property>
+		    <property name="receives_default">False</property>
+		    <property name="draw_indicator">True</property>
+		  </object>
+		  <packing>
+		    <property name="left_attach">1</property>
+		    <property name="right_attach">2</property>
+		    <property name="top_attach">1</property>
+		    <property name="bottom_attach">2</property>
+		  </packing>
+		</child>
+	      </object>
+              <packing>
+                <property name="expand">True</property>
+                <property name="fill">True</property>
+                <property name="position">3</property>
+              </packing>
+	    </child>
           </object>
           <packing>
             <property name="expand">True</property>
